examples/failing/modules/dir/second.cz
import ../third as t

print(t.bar);
